--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@emotion/styled": "^11.3.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
