--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "lodash.capitalize": "^4.2.1",
+    "lodash.startcase": "^4.4.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,7 +35,7 @@
     "@storybook/react": "^6.3.2",
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/lodash.capitalize": "^4.2.6",
+    "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
