--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged --offline"
     }
   },
   "lint-staged": {
