--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "copy-text-to-clipboard": "^3.0.1",
     "lodash.startcase": "^4.4.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
@@ -58,7 +59,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged --offline"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
