--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "clipboard-copy": "^4.0.1",
+    "lodash.debounce": "^4.0.8",
     "lodash.startcase": "^4.4.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
@@ -36,6 +37,7 @@
     "@storybook/react": "^6.3.2",
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
