--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "clipboard-copy": "^4.0.1",
