--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.startcase": "^4.4.0",
     "next": "^12.0.3",
+    "prisma": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.0"
