updating link and button components for display

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,8 @@
     "react/jsx-one-expression-per-line": "off",
 
     // Typescript
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   },
   "parserOptions": {
     "ecmaFeatures": {
