--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "3.5.0",
     "clipboard-copy": "^4.0.1",
+    "lodash.camelcase": "^4.3.0",
     "lodash.debounce": "^4.0.8",
     "lodash.startcase": "^4.4.0",
     "next": "^12.0.3",
@@ -40,6 +41,7 @@
     "@storybook/react": "^6.3.2",
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^14.14.35",
