--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clipboard-copy": "^4.0.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.set": "^4.3.2",
     "lodash.startcase": "^4.4.0",
     "next": "^12.0.3",
     "prisma": "3.5.0",
@@ -43,6 +44,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.set": "^4.3.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
