--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.6.1",
@@ -64,6 +65,7 @@
     "jest": "^27.0.6",
     "lint-staged": "^10.5.4",
     "prettier": "2.3.2",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.3.5"
   },
   "husky": {
