--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@prisma/client": "3.5.0",
     "clipboard-copy": "^4.0.1",
     "lodash.camelcase": "^4.3.0",
+    "lodash.capitalize": "^4.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.set": "^4.3.2",
+    "lodash.sortby": "^4.7.0",
     "lodash.startcase": "^4.4.0",
     "next": "^12.0.3",
     "prisma": "3.5.0",
@@ -44,8 +46,10 @@
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.camelcase": "^4.3.6",
+    "@types/lodash.capitalize": "^4.2.6",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.set": "^4.3.6",
+    "@types/lodash.sortby": "^4.7.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
