working on fixing add another multi field logic, which was working somehow before, but probably not correctly

--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,8 @@
 
     // Typescript
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   },
   "parserOptions": {
     "ecmaFeatures": {
