adding migrate commands

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "lint": "next lint",
-    "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages"
+    "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages",
+    "prisma:migrate:dev": "yarn prisma migrate dev --name",
+    "prisma:migrate": "yarn prisma migrate deploy"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.6.1",
