--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@auth0/nextjs-auth0": "^1.6.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@prisma/client": "3.5.0",
+    "@prisma/client": "^4.1.0",
     "clipboard-copy": "^4.0.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.capitalize": "^4.2.1",
@@ -32,7 +32,6 @@
     "lodash.sortby": "^4.7.0",
     "lodash.startcase": "^4.4.0",
     "next": "^12.0.3",
-    "prisma": "3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0"
@@ -72,6 +71,7 @@
     "jest": "^27.0.6",
     "lint-staged": "^10.5.4",
     "prettier": "2.3.2",
+    "prisma": "^4.1.0",
     "ts-prune": "^0.10.3",
     "typescript": "^4.3.5"
   },
