--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^4.1.0",
     "clipboard-copy": "^4.0.1",
+    "downshift": "^6.1.7",
     "lodash.camelcase": "^4.3.0",
     "lodash.capitalize": "^4.2.1",
     "lodash.debounce": "^4.0.8",
