cool rulebook hover ascii effect

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@prisma/client": "^4.1.0",
+    "@types/lodash.sample": "^4.2.7",
     "clipboard-copy": "^4.0.1",
     "downshift": "^6.1.7",
     "lodash.camelcase": "^4.3.0",
     "lodash.capitalize": "^4.2.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.sample": "^4.2.1",
     "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
     "lodash.startcase": "^4.4.0",
