--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "homepage": "https://rpgsheet.games/",
   "scripts": {
     "dev": "next dev",
-    "build": "yarn lint:prune && next build",
+    "build": "next build",
     "build:serve": "yarn build && yarn next start -p 3003",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "lint": "next lint",
+    "lint": "next lint && yarn lint:prune",
     "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages",
     "prisma:migrate:dev": "yarn prisma migrate dev --name",
     "prisma:migrate": "yarn prisma migrate deploy"
