using basecharactersheet, basic info inputs working

--- a/.eslintrc
+++ b/.eslintrc
@@ -74,6 +74,7 @@
     "react/self-closing-comp": "warn",
     "react/no-access-state-in-setstate": "error",
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-tag-spacing": "off",
 
     // Typescript
     "@typescript-eslint/explicit-module-boundary-types": "off",
