--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "cSpell.words": ["Rulebook", "Sotdl"]
+  "cSpell.words": ["nextjs", "Rulebook", "Sotdl"]
 }
