--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/nextjs-auth0": "^1.9.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.11.7",
     "@prisma/client": "^4.1.0",
     "@types/lodash.sample": "^4.2.7",
     "clipboard-copy": "^4.0.1",
