--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "jest",
     "lint": "next lint && yarn lint:prune",
     "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages",
-    "prisma:migrate:dev": "yarn prisma migrate dev --name",
-    "prisma:migrate": "yarn prisma migrate deploy"
+    "prisma:migrate:dev": "prisma migrate dev --name",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
