--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "semi": "off",
     "indent": "off",
     "comma-dangle": "off",
+    "function-paren-newline": "off",
 
     // import
     "import/no-named-as-default": "off",
