--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^4.1.0",
     "@types/lodash.sample": "^4.2.7",
     "clipboard-copy": "^4.0.1",
+    "date-fns": "^2.29.3",
     "downshift": "^6.1.7",
     "lodash.camelcase": "^4.3.0",
     "lodash.capitalize": "^4.2.1",
