--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "indent": "off",
     "comma-dangle": "off",
     "function-paren-newline": "off",
+    "no-shadow": "off", // ts-rule below
 
     // import
     "import/no-named-as-default": "off",
@@ -81,7 +82,8 @@
     // Typescript
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-shadow": "error"
   },
   "parserOptions": {
     "ecmaFeatures": {
