--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
     "lodash.startcase": "^4.4.0",
+    "lodash.upperfirst": "^4.3.1",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +59,7 @@
     "@types/lodash.set": "^4.3.6",
     "@types/lodash.sortby": "^4.7.6",
     "@types/lodash.startcase": "^4.4.6",
+    "@types/lodash.upperfirst": "^4.3.7",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
