--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "lint": "next lint && yarn lint:prune",
-    "lint:prune": "! ts-prune -i src/pages/* | grep -v -e 'used in module' -e src/pages",
+    "lint:prune": "! ts-prune -i src/pages/* -i src/logic/tests/* | grep -v -e 'used in module' -e src/pages",
     "prisma:migrate:dev": "prisma migrate dev --name",
     "prisma:migrate": "prisma migrate deploy"
   },
