--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/base": "^5.0.0-alpha.116",
     "@prisma/client": "^4.1.0",
     "@types/lodash.sample": "^4.2.7",
+    "add": "^2.0.6",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.29.3",
     "downshift": "^6.1.7",
@@ -37,10 +38,13 @@
     "lodash.startcase": "^4.4.0",
     "lodash.upperfirst": "^4.3.1",
     "next": "^13.1.6",
+    "next-superjson-plugin": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.25.0",
-    "uuid": "^9.0.0"
+    "superjson": "^1.12.2",
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -67,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-superjson-next": "^0.4.5",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.1.6",
