--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^5.50.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-superjson-next": "^0.4.5",
+    "csstype": "^3.1.1",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.1.6",
