--- a/package.json
+++ b/package.json
@@ -24,19 +24,11 @@
     "@emotion/styled": "^11.10.6",
     "@mui/base": "^5.0.0-alpha.116",
     "@prisma/client": "^4.1.0",
-    "@types/lodash.sample": "^4.2.7",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.29.3",
     "dompurify": "^3.0.1",
     "downshift": "^6.1.7",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.capitalize": "^4.2.1",
-    "lodash.debounce": "^4.0.8",
-    "lodash.sample": "^4.2.1",
-    "lodash.set": "^4.3.2",
-    "lodash.sortby": "^4.7.0",
-    "lodash.startcase": "^4.4.0",
-    "lodash.upperfirst": "^4.3.1",
+    "lodash": "^4.17.21",
     "next": "^13.1.6",
     "next-superjson-plugin": "^0.5.4",
     "react": "^18.2.0",
@@ -55,13 +47,7 @@
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/dompurify": "^2.4.0",
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/lodash.capitalize": "^4.2.6",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/lodash.set": "^4.3.6",
-    "@types/lodash.sortby": "^4.7.6",
-    "@types/lodash.startcase": "^4.4.6",
-    "@types/lodash.upperfirst": "^4.3.7",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
