--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "rpg-sheet-dot-games",
   "private": false,
-  "author": "<troychryssos@gmail.com>",
+  "author": "Troy Chryssos <troychryssos@gmail.com> (troychryssos.com)",
   "description": "An online TTRPG character sheet compendium",
   "license": "MIT",
   "homepage": "https://rpgsheet.games/",
+  "engines": {
+    "node": ">=16.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
