--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,12 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "cSpell.words": ["nextjs", "rpgsheet", "Rulebook", "Sotdl", "Unreadied"]
+  "cSpell.words": [
+    "nextjs",
+    "rpgsheet",
+    "Rulebook",
+    "Sotdl",
+    "sotww",
+    "Unreadied"
+  ]
 }
