--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.4",
+    "@playwright/test": "^1.35.0",
     "@prisma/client": "^4.15.0",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.29.3",
     "dompurify": "^3.0.1",
     "downshift": "^7.6.0",
     "lodash": "^4.17.21",
-    "next": "^13.1.6",
-    "next-superjson-plugin": "^0.5.4",
+    "next": "^13.5.0",
+    "next-superjson-plugin": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "superjson": "^1.13.3",
-    "uuid": "^9.0.0",
-    "@playwright/test": "^1.35.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.11.0",
