cybereware inputs, adding weapon and armor provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "editor.defaultFormatter": "Prisma.prisma"
   },
   "cSpell.words": [
+    "Cyberware",
     "nextjs",
     "rpgsheet",
     "Rulebook",
