--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "editor.defaultFormatter": "Prisma.prisma"
   },
   "cSpell.words": [
+    "Cyberdeck",
+    "cyberdecks",
     "Cyberware",
     "cyberwares",
     "Manip",
