--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/nextjs-auth0": "^1.9.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react": "^0.26.23",
     "@mui/base": "5.0.0-beta.4",
     "@playwright/test": "^1.35.0",
     "@prisma/client": "^4.15.0",
