--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@floating-ui/react": "^0.26.23",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@mui/base": "5.0.0-beta.4",
     "@playwright/test": "^1.35.0",
     "@prisma/client": "^4.15.0",
