adding fixed to quick access menu via pin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,10 @@
     "unequip",
     "unequips",
     "Unreadied"
-  ]
+  ],
+  "files.associations": {
+    "*.env*": "env",
+    "*.env.development": "env",
+    "*.env.production": "env"
+  }
 }
